--- a/src/components/Navigation/Navigation.scss
+++ b/src/components/Navigation/Navigation.scss
@@ -6,18 +6,18 @@
         flex-direction: row;
         justify-content: flex-start;
         
-        li {        
-            a {
-                display: block;
-                padding: 0 36px;
-                line-height: 80px;
-                height: 80px;
-                text-decoration: none;
+        li a {
+            display: block;
+            padding: 0 36px;
+            line-height: 80px;
+            height: 80px;
+            text-decoration: none;
+            border-bottom: 2px solid #ffffff;
 
-                &:hover, &.active {
-                    color: #5ece7b;
-                }
-            }  
-        } 
+            &:hover, &.active {
+                color: #5ece7b;
+                border-bottom-color: #5ece7b;
+            }
+        }
     }
 }
