Added images. Added the 'ProductCart' component and a slider. Implemented 'OUT OF STOCK' and 'IN CART'. Changed the layout. Deleted several unnecessary standart files.

--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -9,6 +9,10 @@ main {
     .products {
         display: flex;
         flex-wrap: wrap;
-        justify-content: space-between;
+        margin: 0 -40px;
+
+        a {
+            text-decoration: none;
+        }
     }
 }
