--- a/src/components/Actions/Actions.scss
+++ b/src/components/Actions/Actions.scss
@@ -1,29 +1,48 @@
 .actions {
-    display: inline-block;
+    height: 50%;
     position: absolute;
-    right: 101px;
-    top: 50%;
-    transform: translateY(-50%);
+    top: 0;
+    right: 0;
+    margin: 25px 0 15px 0;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
 
-    ul {
-        display: flex;
-        flex-direction: row;
-        justify-content: flex-end;
-        
-        li {
-            margin: 0 22px;
-            cursor: pointer;
+    .currency {
+        cursor: pointer;
 
-            .currencies ul {
-                display: block;
-                position: absolute;
-                box-shadow: 0px 4px 35px rgba(168, 172, 176, 0.19);
+        .active-currency { margin-right: 10px; }
 
-                li {
-                    padding: 0 40px 0 20px;
-                    margin: 20px 0;
-                }
+        .currencies ul {
+            display: block;
+            position: absolute;
+            box-shadow: 0px 4px 35px rgba(168, 172, 176, 0.19);
+
+            li {
+                padding: 0 40px 0 20px;
+                margin: 20px 0;
             }
         } 
+    }
+
+    .cart {
+        margin-left: 22px;
+
+        a {
+            display: block;
+            height: 20px;
+
+            span {
+                position: absolute;
+                top: 0;
+                right: -12px;
+                width: 20px;
+                height: 20px;
+                border-radius: 50%;
+                background-color: #1d1f22;
+                color: #ffffff;
+                text-align: center;
+            }
+        }
     }
 }
