--- a/src/components/Navigation/Navigation.scss
+++ b/src/components/Navigation/Navigation.scss
@@ -14,7 +14,11 @@
             text-decoration: none;
             border-bottom: 2px solid #ffffff;
 
-            &:hover, &.active {
+            &:hover {
+                color: #5ece7b;
+            }
+
+            &.active {
                 color: #5ece7b;
                 border-bottom-color: #5ece7b;
             }
