--- a/src/components/ProductCard/ProductCard.scss
+++ b/src/components/ProductCard/ProductCard.scss
@@ -1,23 +1,69 @@
 .product-card {
-    margin-top: 103px;
-    padding: 16px;
-    width: 386px;
-    height: 444px;
+    position: relative;
+    margin: 103px 40px 0 40px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 
-    img {
-        position: static;
-        width: 354px;
-        height: 330px;
-        left: 16px;
-        top: 16px;
+    .out-of-stock {
+        position: absolute;
+        width: 386px;
+        height: 444px;
+        opacity: 0.5;
+        background: #c4c4c4;
+        color: #8d8f9a;
+        font-size: 24px;
+        font-weight: 400;
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
 
-    figcaption {
-        margin-top: 24px;
-        width: 100%;
+    a {
+        width: 386px;
+        height: 444px;
+        padding: 16px;
+
+        img {
+            width: 354px;
+            height: 330px;
+        }
+
+        figcaption {
+            margin-top: 24px;
+            width: 100%;
+
+            p {
+                height: 29px;
+                line-height: 29px;
+                font-size: 18px;
+
+                &.product-price {
+                    font-weight: 500;
+                }
+            }
+
+            .in-cart {
+                position: absolute;
+                bottom: 72px;
+                right: 31px;
+                width: 52px;
+                height: 52px;
+                background: #5ece7b;
+                border-radius: 50%;
+                padding: 15px;;
+
+                img {
+                    max-width: 100%;
+                    max-height: 100%;
+                    background: #5ece7b;
+                }
+            }
+        }
+    }
+
+    &.product-in-cart {
+        box-shadow: 0px 4px 35px rgba(168, 172, 176, 0.19);
     }
 }
