--- a/src/index.css
+++ b/src/index.css
@@ -2,15 +2,13 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  background: #ffffff;
   color: #1d1f22;
-  font-family: Raleway;
-  /* font-style: normal; */
+  font-family: 'Raleway';
 }
 
 body {
   margin: 0;
-  /* overflow-y: hidden; */
+  overflow-y: scroll;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
