Added the 'PreviewCart' component.

--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -1,4 +1,4 @@
-main {
+// main {
     .title {
         font-style: normal;
         font-weight: normal;
@@ -15,4 +15,4 @@ main {
             text-decoration: none;
         }
     }
-}
+// }
