--- a/src/components/Actions/Actions.scss
+++ b/src/components/Actions/Actions.scss
@@ -2,7 +2,7 @@
     height: 50%;
     position: absolute;
     top: 0;
-    right: 0;
+    right: 100px;
     margin: 25px 0 15px 0;
     display: flex;
     align-items: center;
