--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -1,3 +1,7 @@
-.app-wrapper {
-    padding: 0 100px 70px 100px;
+// .app-wrapper {
+    // padding: 0 100px 70px 100px;
+// }
+
+main {
+    padding: 80px 100px 0 100px;
 }
