--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -6,7 +6,8 @@
     top: 0%;
     bottom: 0%;
     height: 80px;
-    margin-bottom: 80px;
+    // margin-bottom: 80px;
+    padding: 0 100px;
 
     ul {
         list-style: none;
