--- a/src/index.css
+++ b/src/index.css
@@ -3,13 +3,12 @@
   padding: 0;
   box-sizing: border-box;
   color: #1d1f22;
-  font-family: 'Raleway';
 }
 
 body {
   margin: 0;
   overflow-y: scroll;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: -apple-system, BlinkMacSystemFont, 'Raleway', 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
