Added the 'Button' component.

--- a/src/components/PreviewCart/PreviewCart.scss
+++ b/src/components/PreviewCart/PreviewCart.scss
@@ -1,7 +1,6 @@
 .preview-cart {
     position: absolute;
     width: 325px;
-    // height: 540px;
     top: 80px;
     right: 100px;
     padding: 0 16px;
@@ -29,21 +28,6 @@
         display: flex;
         justify-content: space-between;
 
-        a {
-            text-decoration: none;
-        }
-
-        button {
-            width: 140px;
-            height: 43px;
-            padding: 16px;
-            border: 1px solid #1d1f22;
-            background-color: #ffffff;
-            box-sizing: border-box;
-            cursor: pointer;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
+        a { text-decoration: none; }
     }
 }
