--- a/src/pages/Product/Product.scss
+++ b/src/pages/Product/Product.scss
@@ -13,8 +13,7 @@
                 margin-bottom: 40px;
                 cursor: pointer;
 
-                img {    
-                    position: static;
+                img {
                     max-width: 100%;
                     max-height: 100%;
                 }
@@ -24,16 +23,18 @@
 
     .info {
         width: 100%;
-        padding: 0 40px;
+        margin-left: 40px;
         display: flex;
         flex-direction: row;
 
         .image-show {
             width: 610px;
             height: 510px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
 
             img {
-                position: static;
                 max-width: 100%;
                 max-height: 100%;
             }
@@ -41,7 +42,7 @@
 
         .product-info {
             margin-left: 120px;
-            width: 292px;
+            max-width: 300px;
 
             p {
                 font-size: 30px;
