Connected 'prop-types'. Added 'prop-types' to components and pages.

--- a/src/components/Actions/Actions.scss
+++ b/src/components/Actions/Actions.scss
@@ -42,6 +42,7 @@
                 background-color: #1d1f22;
                 color: #ffffff;
                 text-align: center;
+                font-size: 14px;
             }
         }
     }
