Implemented the output of attributes in components and pages.

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,17 +1,9 @@
 .header {
-    // background-color: aqua;
     position: relative;
-    left: 0%;
-    right: 0%;
-    top: 0%;
-    bottom: 0%;
+    left: 0;
+    top: 0;
     height: 80px;
-    // margin-bottom: 80px;
     padding: 0 100px;
-
-    ul {
-        list-style: none;
-    }
 
     .logo {
         position: absolute;
