--- a/src/components/PreviewCart/PreviewCart.scss
+++ b/src/components/PreviewCart/PreviewCart.scss
@@ -3,31 +3,27 @@
     width: 325px;
     top: 80px;
     right: 100px;
-    padding: 0 16px;
+    padding: 0 16px 16px 16px;
     background: #ffffff;
     z-index: 99;
 
-    .title {
+    .preview-title {
         font-weight: bold;
         font-size: 16px;
-        padding: 8px 0;
+        padding-top: 8px;
     }
 
     .total {
-        height: 28px;
         font-weight: 700;
         font-size: 16px;
-        padding-top: 16px;
+        margin-bottom: 40px;
         display: flex;
         justify-content: space-between;
         align-items: center;
     }
 
     .buttons {
-        padding: 16px 0;
         display: flex;
         justify-content: space-between;
-
-        a { text-decoration: none; }
     }
 }
