--- a/src/components/ProductCart/ProductCart.scss
+++ b/src/components/ProductCart/ProductCart.scss
@@ -11,7 +11,23 @@
                 margin-bottom: 16px;
             }
 
-            .title {font-weight: 600;}
+            .title { font-weight: 600; }
+
+            .price { 
+                font-size: 24px;
+                font-weight: 700;
+             }
+
+             .attributes {
+                 margin-bottom: 10px;
+                 text-transform: uppercase;
+
+                .attribute-items {
+                    display: flex;
+                    justify-content: flex-start;
+                    flex-wrap: wrap;
+                }
+             }
         }
 
         .count {
@@ -30,7 +46,6 @@
             position: relative;
             margin-left: 12px;
             width: 140px;
-            height: 185px;
             display: flex;
             align-items: center;
 
