--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -1,18 +1,13 @@
-// main {
-    .title {
-        font-style: normal;
-        font-weight: normal;
-        font-size: 42px;
-        line-height: 160%;
-    }
+.title {
+    font-style: normal;
+    font-weight: normal;
+    text-transform: uppercase;
+    font-size: 42px;
+    line-height: 68px;
+}
 
-    .products {
-        display: flex;
-        flex-wrap: wrap;
-        margin: 0 -40px;
-
-        a {
-            text-decoration: none;
-        }
-    }
-// }
+.products {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 0 -40px;
+}
