--- a/src/pages/Product/Product.scss
+++ b/src/pages/Product/Product.scss
@@ -4,22 +4,18 @@
     .images-preview {
         width: 80px;
 
-        ul {
-            list-style: none;
+        ul li {
+            width: 80px;
+            height: 80px;
+            margin-bottom: 40px;
+            cursor: pointer;
+            display: flex;
+            justify-content: center;
+            align-items: center;
 
-            li {
-                width: 80px;
-                height: 80px;
-                margin-bottom: 40px;
-                cursor: pointer;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-
-                img {
-                    max-width: 100%;
-                    max-height: 100%;
-                }
+            img {
+                max-width: 100%;
+                max-height: 100%;
             }
         }
     }
@@ -55,11 +51,35 @@
             .title {font-weight: 600;}
             .name {margin-bottom: 40px;}
             
-            .size,
-            .price span {
-                font-size: 18px;
-                font-weight: 700;
+            .attributes {
                 margin-bottom: 10px;
+                text-transform: uppercase;
+
+                .attribute-wrapper {
+                    margin-top: 16px;
+
+                    .attribute-title {
+                        font-size: 18px;
+                        font-weight: 700;
+                        margin-bottom: 8px;                       
+                    }
+
+                    .attribute-items {
+                        display: flex;
+                        justify-content: flex-start;
+                        flex-wrap: wrap;
+                    }
+                }
+            }
+
+            .price {
+                margin-top: 40px;
+                
+                span {
+                    font-size: 18px;
+                    font-weight: 700;
+                    margin-bottom: 10px;
+                }
             }
 
             .description {
