--- a/src/pages/Product/Product.scss
+++ b/src/pages/Product/Product.scss
@@ -40,8 +40,8 @@
         }
 
         .product-info {
-            margin-left: 120px;
-            max-width: 300px;
+            margin-left: 100px;
+            width: 300px;
 
             p {
                 font-size: 30px;
