--- a/src/components/Navigation/Navigation.scss
+++ b/src/components/Navigation/Navigation.scss
@@ -20,6 +20,7 @@
             &.active {
                 color: #5ece7b;
                 border-bottom-color: #5ece7b;
+                font-weight: 600;
             }
         }
     }
