--- a/src/components/MiniCart/MiniCart.scss
+++ b/src/components/MiniCart/MiniCart.scss
@@ -13,7 +13,7 @@
         padding-top: 8px;
     }
 
-    .total {
+    .preview-total {
         font-weight: 700;
         font-size: 16px;
         margin-bottom: 40px;
