--- a/src/components/ProductCard/ProductCard.scss
+++ b/src/components/ProductCard/ProductCard.scss
@@ -1,5 +1,8 @@
 .product-card {
     position: relative;
+    width: 386px;
+    height: 444px;
+    padding: 16px;
     margin: 100px 40px 0 40px;
     display: flex;
     flex-direction: column;
@@ -8,8 +11,8 @@
 
     .out-of-stock {
         position: absolute;
-        width: 386px;
-        height: 444px;
+        width: 100%;
+        height: 100%;
         opacity: 0.5;
         background: #c4c4c4;
         color: #8d8f9a;
@@ -21,44 +24,43 @@
     }
 
     a {
-        width: 386px;
-        height: 444px;
-        padding: 16px;
+        width: 354px;
+        height: 330px;
 
         img {
-            width: 354px;
-            height: 330px;
+            width: 100%;
+            height: 100%;
+        }
+    }
+
+    figcaption {
+        margin-top: 24px;
+        width: 100%;
+
+        p {
+            height: 29px;
+            line-height: 29px;
+            font-size: 18px;
+
+            &.product-price {
+                font-weight: bold;
+            }
         }
 
-        figcaption {
-            margin-top: 24px;
-            width: 100%;
+        .in-cart {
+            position: absolute;
+            bottom: 72px;
+            right: 31px;
+            width: 52px;
+            height: 52px;
+            background: #5ece7b;
+            border-radius: 50%;
+            padding: 15px;;
 
-            p {
-                height: 29px;
-                line-height: 29px;
-                font-size: 18px;
-
-                &.product-price {
-                    font-weight: 500;
-                }
-            }
-
-            .in-cart {
-                position: absolute;
-                bottom: 72px;
-                right: 31px;
-                width: 52px;
-                height: 52px;
+            img {
+                max-width: 100%;
+                max-height: 100%;
                 background: #5ece7b;
-                border-radius: 50%;
-                padding: 15px;;
-
-                img {
-                    max-width: 100%;
-                    max-height: 100%;
-                    background: #5ece7b;
-                }
             }
         }
     }
