--- a/src/pages/Cart/Cart.scss
+++ b/src/pages/Cart/Cart.scss
@@ -3,5 +3,14 @@
         font-weight: 700;
         font-size: 32px;
         margin-bottom: 60px; 
-    }    
+    }
+    
+    .total {
+        font-weight: 700;
+        font-size: 32px;
+        margin: 60px 0;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
 }
