--- a/src/components/MiniCart/MiniCart.scss
+++ b/src/components/MiniCart/MiniCart.scss
@@ -1,4 +1,4 @@
-.preview-cart {
+.mini-cart {
     position: absolute;
     width: 325px;
     top: 80px;
@@ -7,13 +7,25 @@
     background: #ffffff;
     z-index: 99;
 
-    .preview-title {
+    .mini-title {
         font-weight: bold;
         font-size: 16px;
         padding-top: 8px;
     }
 
-    .preview-total {
+    .mini-products {
+        max-height: 60vh;
+        margin-bottom: 10px;
+        overflow-x: hidden;
+        overflow-y: scroll;
+        scrollbar-width: none;
+        
+        &::-webkit-scrollbar {
+            width: 0;
+        }
+    }
+
+    .mini-total {
         font-weight: 700;
         font-size: 16px;
         margin-bottom: 40px;
