--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -1,3 +1,12 @@
+.cover {
+    background: rgb(57, 55, 72);
+    width: 100%;
+    height: 100%;
+    opacity: 0.22;
+    position: absolute;
+    z-index: 98;
+}
+
 main {
     padding: 80px 100px 190px 100px;
 }
