Added the 'All' category.

--- a/src/components/Navigation/Navigation.scss
+++ b/src/components/Navigation/Navigation.scss
@@ -12,6 +12,7 @@
             line-height: 80px;
             height: 80px;
             border-bottom: 2px solid #ffffff;
+            text-transform: uppercase;
 
             &:hover {
                 color: #5ece7b;
