Added the 'OutOfStock' component. Implemented the effect of hovering the cursor over the 'ProductCard' component. Removed arrows from the cart item image if there is only one image. Implemented 'ref + innerHTML' instead of 'dangerouslySetInnerHTML'. Added 'brand' to the 'ProductCard' component.

--- a/src/pages/Product/Product.scss
+++ b/src/pages/Product/Product.scss
@@ -1,4 +1,5 @@
 .product-wrapper {
+    position: relative;
     display: flex;
 
     .images-preview {
@@ -27,7 +28,7 @@
         flex-direction: row;
 
         .image-show {
-            max-width: 610px;
+            min-width: 610px;
             height: 510px;
             display: flex;
             justify-content: center;
