--- a/src/components/ProductCard/ProductCard.scss
+++ b/src/components/ProductCard/ProductCard.scss
@@ -8,21 +8,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-
-    .out-of-stock {
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        opacity: 0.5;
-        background: #c4c4c4;
-        color: #8d8f9a;
-        font-size: 24px;
-        font-weight: 400;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
-
+    
     a {
         width: 354px;
         height: 330px;
@@ -66,7 +52,8 @@
         }
     }
 
-    &.product-in-cart {
+    &.product-in-cart,
+    &:hover {
         box-shadow: 0px 4px 35px rgba(168, 172, 176, 0.19);
     }
 }
